@@ -12,7 +12,7 @@ Example: the default configuration checks that a "name" tag is present on a obje
 
 In C-Mode only objects that have warnings are displayed, making it simple to find objects with missing tags and other potential problems. Starting the property editor for an object in C-Mode will automatically apply the best match presets.
 
-Currently C-Mode is accessed by cycling through the modes via long press on the "Lock" button. This will likely be replaced by an alternative mechanism for release.
+Cycling through modes by long pressing on the lock button has become impractical with the increasing number of modes and has now been replaced with a menu.
 
 ## Miscellaneous 
 
