@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 </head>
 <body>
-<h1>Vespucci 0.9.10 BETA Highlights</h1><h2>Configurable validator</h2><p>The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for re-surveying, introduced in 0.9.9, is now fully configurable.</p><p>The missing tag check works on the combination of the keys that should be checked and the preset for element.</p><p>Example: the default configuration checks that a "name" tag is present on a object if the matching preset contains a "name" field in the non-optional tags, optionally the check can be extended to "optional" tags.</p><h2>C-Mode</h2><p>In C-Mode only objects that have warnings are displayed, making it simple to find objects with missing tags and other potential problems. Starting the property editor for an object in C-Mode will automatically apply the best match presets.</p><p>Currently C-Mode is accessed by cycling through the modes via long press on the "Lock" button. This will likely be replaced by an alternative mechanism for release.</p><h2>Miscellaneous</h2>
+<h1>Vespucci 0.9.10 BETA Highlights</h1><h2>Configurable validator</h2><p>The internal validator has been re-factored, among many other changes there is now a check for missing keys and the check for re-surveying, introduced in 0.9.9, is now fully configurable.</p><p>The missing tag check works on the combination of the keys that should be checked and the preset for element.</p><p>Example: the default configuration checks that a "name" tag is present on a object if the matching preset contains a "name" field in the non-optional tags, optionally the check can be extended to "optional" tags.</p><h2>C-Mode</h2><p>In C-Mode only objects that have warnings are displayed, making it simple to find objects with missing tags and other potential problems. Starting the property editor for an object in C-Mode will automatically apply the best match presets.</p><p>Cycling through modes by long pressing on the lock button has become impractical with the increasing number of modes and has now been replaced with a menu.</p><h2>Miscellaneous</h2>
 <ul>
   <li>The icon for splitting a selected way is now a pair of scissors.</li>
   <li>Improved label rendering.</li>
