@@ -1,5 +1,7 @@
 ﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.
 
+1313: Provide a dropdown for mode selection instead of cycling on long press.
+
 1312: Protect against looping on diff upload issues, updated translations.
 
 1310: Fix a handful of issues with PresetFilters, apply Preset automatically to new objects.
